2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Add exclude-list and exclude-file to
	  backup operation

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: exclude postmaster.pid, postmaster.opts
	  and pg_replslot/*

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: s/vaulting/writing/

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Controller.pm (msg_ABORT): Set mesg from param

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add error 36, 37 and 38

2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amflush.pl: Use the date specified by the user

2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amar-src/amar.c: Fix race with stop/start_read when record are
	  already read

2017-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c, common-src/security-util.c: Fix getservbyport_r
	  with 4 arguments

2017-08-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Call correct variant of getservbyport_r
	* common-src/krb5-security.c: Call correct variant of getservbyname_r
	* common-src/security-util.c: Call correct variant of getservbyname_r
	* common-src/ambind.c: include netinet/in.h
	* config/amanda/syshacks.m4: Do not set GETSERVBYNAME_R5 and
	  GETSERVBYPORT_R5
	* config/amanda/amanda_configure.m4: use ax_func_which_getservbyname_r
	* config/macro-archive/ax_func_which_getservbyname_r.m4: New macro to
	  detect getservbyname_r variant

2017-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix compilation

2017-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Print html error even on curl error

2017-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.c: Check for S3_ERROR_NotFound
