@@ -103,6 +103,10 @@ $USE_AMANDAHOSTS = "@USE_AMANDAHOSTS@";
 $USE_RUNDUMP = "@USE_RUNDUMP@";
 $VDUMP = "@VDUMP@";
 $VERSION = "@VERSION@";
+$VERSION_MAJOR = "@VERSION_MAJOR@";
+$VERSION_MINOR = "@VERSION_MINOR@";
+$VERSION_PATCH = "@VERSION_PATCH@";
+$VERSION_COMMENT = "@VERSION_COMMENT@";
 $VRESTORE = "@VRESTORE@";
 $VXDUMP = "@VXDUMP@";
 $VXRESTORE = "@VXRESTORE@";
